--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ altair==5.0.1
 anyio==3.6.2
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
+arrow==1.3.0
 asttokens==2.2.1
 astunparse==1.6.3
 async-timeout==4.0.2
@@ -23,7 +24,9 @@ charset-normalizer==3.1.0
 click==7.1.2
 cmake==3.26.4
 comm==0.1.3
+contourpy==1.1.1
 ctranslate2==3.9.0
+cycler==0.12.1
 Cython==0.29.35
 debugpy==1.6.6
 decorator==5.1.1
@@ -34,6 +37,8 @@ fastapi==0.99.1
 fastjsonschema==2.16.3
 ffmpy==0.3.0
 flatbuffers==23.5.26
+fonttools==4.43.1
+fqdn==1.5.1
 frozenlist==1.3.3
 gast==0.4.0
 gdown==4.6.0
@@ -48,6 +53,7 @@ h11==0.14.0
 h5py==3.9.0
 httpcore==0.17.2
 httpx==0.24.1
+idna==3.4
 imagesize==1.4.1
 importlib-metadata==6.1.0
 importlib-resources==5.12.0
@@ -56,11 +62,13 @@ ipykernel==6.22.0
 ipython==8.11.0
 ipython-genutils==0.2.0
 ipywidgets==8.0.5
+isoduration==20.11.0
 jax==0.4.13
 jedi==0.18.2
 Jinja2==3.1.2
 joblib==1.3.1
 jsonlines==4.0.0
+jsonpointer==2.4
 jsonschema==4.17.3
 jupyter==1.0.0
 jupyter-console==6.6.3
@@ -72,12 +80,14 @@ jupyter_server_terminals==0.4.4
 jupyterlab-pygments==0.2.2
 jupyterlab-widgets==3.0.6
 keras==2.12.0
+kiwisolver==1.4.5
 libclang==16.0.0
 linkify-it-py==2.0.2
 lit==16.0.6
 lxml==4.9.2
 markdown-it-py==2.2.0
 MarkupSafe==2.1.2
+matplotlib==3.7.3
 matplotlib-inline==0.1.6
 mdurl==0.1.2
 mistune==2.0.5
@@ -116,18 +126,22 @@ packaging==23.0
 pandas==2.0.3
 pandocfilters==1.5.0
 parso==0.8.3
+pexpect==4.8.0
 pickleshare==0.7.5
+Pillow==10.1.0
 pkgutil_resolve_name==1.3.10
 platformdirs==3.2.0
 portalocker==2.7.0
 prometheus-client==0.16.0
 promise==2.3
 prompt-toolkit==3.0.38
+psutil==5.9.6
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pycparser==2.21
 pydub==0.25.1
 Pygments==2.15.1
+pyparsing==3.1.1
 pyrsistent==0.19.3
 PySocks==1.7.1
 python-dateutil==2.8.2
@@ -143,6 +157,7 @@ requests==2.31.0
 requests-oauthlib==1.3.1
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
+rich==13.6.0
 sacrebleu==2.3.1
 sacremoses==0.0.53
 scikit-learn==1.3.0
@@ -150,6 +165,7 @@ scipy==1.10.1
 semantic-version==2.10.0
 Send2Trash==1.8.0
 sentencepiece==0.1.99
+six==1.16.0
 sniffio==1.3.0
 snowballstemmer==2.2.0
 soupsieve==2.4
@@ -183,16 +199,21 @@ tinycss2==1.2.1
 toolwrapper==2.1.0
 toolz==0.12.0
 tornado==6.2
+tqdm==4.66.1
 traitlets==5.9.0
 typeguard==2.13.3
+types-python-dateutil==2.8.19.14
 typing_extensions==4.7.1
 tzdata==2023.3
 uc-micro-py==1.0.2
 uctools==1.3.0
 urduhack==1.1.1
+uri-template==1.3.0
 uvicorn==0.22.0
 wcwidth==0.2.6
+webcolors==1.13
 webencodings==0.5.1
+websocket-client==1.6.4
 websockets==11.0.3
 Werkzeug==2.3.6
 widgetsnbextension==4.0.6
