--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ aiosignal==1.3.1
 alabaster==0.7.13
 altair==5.0.1
 anyio==3.6.2
+appdirs==1.4.4
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
 arrow==1.3.0
@@ -18,30 +19,42 @@ backcall==0.2.0
 beautifulsoup4==4.11.2
 bitarray==2.7.6
 bleach==6.0.0
+Brotli @ file:///tmp/abs_ecyw11_7ze/croots/recipe/brotli-split_1659616059936/work
 cachetools==5.3.1
+certifi @ file:///croot/certifi_1690232220950/work/certifi
 cffi==1.15.1
 charset-normalizer==3.1.0
 click==7.1.2
 cmake==3.26.4
 comm==0.1.3
 contourpy==1.1.1
+cryptography @ file:///croot/cryptography_1694444244250/work
 ctranslate2==3.9.0
 cycler==0.12.1
 Cython==0.29.35
+datasets==2.14.6
 debugpy==1.6.6
 decorator==5.1.1
 defusedxml==0.7.1
+dill==0.3.7
+docker-pycreds==0.4.0
 docopt==0.6.2
+evaluate==0.4.1
 executing==1.2.0
 fastapi==0.99.1
 fastjsonschema==2.16.3
 ffmpy==0.3.0
+filelock==3.13.0
 flatbuffers==23.5.26
 fonttools==4.43.1
 fqdn==1.5.1
 frozenlist==1.3.3
+fsspec==2023.10.0
 gast==0.4.0
 gdown==4.6.0
+gitdb==4.0.11
+GitPython==3.1.40
+gmpy2 @ file:///tmp/build/80754af9/gmpy2_1645455532332/work
 google-auth==2.21.0
 google-auth-oauthlib==1.0.0
 google-pasta==0.2.0
@@ -53,7 +66,8 @@ h11==0.14.0
 h5py==3.9.0
 httpcore==0.17.2
 httpx==0.24.1
-idna==3.4
+huggingface-hub==0.17.3
+idna @ file:///croot/idna_1666125576474/work
 imagesize==1.4.1
 importlib-metadata==6.1.0
 importlib-resources==5.12.0
@@ -85,18 +99,23 @@ libclang==16.0.0
 linkify-it-py==2.0.2
 lit==16.0.6
 lxml==4.9.2
+Markdown==3.5.1
 markdown-it-py==2.2.0
 MarkupSafe==2.1.2
 matplotlib==3.7.3
 matplotlib-inline==0.1.6
 mdurl==0.1.2
 mistune==2.0.5
+mkl-fft @ file:///croot/mkl_fft_1695058164594/work
+mkl-random @ file:///croot/mkl_random_1695059800811/work
+mkl-service==2.4.0
 ml-dtypes==0.2.0
 mock==5.0.2
 Morfessor==2.0.6
 mosestokenizer==1.2.1
 mpmath==1.3.0
 multidict==6.0.4
+multiprocess==0.70.15
 nbclassic==0.5.3
 nbclient==0.7.2
 nbconvert==7.2.10
@@ -108,16 +127,29 @@ notebook==6.5.3
 notebook_shim==0.2.2
 numpy==1.23.5
 nvidia-cublas-cu11==11.10.3.66
+nvidia-cublas-cu12==12.1.3.1
 nvidia-cuda-cupti-cu11==11.7.101
+nvidia-cuda-cupti-cu12==12.1.105
 nvidia-cuda-nvrtc-cu11==11.7.99
+nvidia-cuda-nvrtc-cu12==12.1.105
 nvidia-cuda-runtime-cu11==11.7.99
+nvidia-cuda-runtime-cu12==12.1.105
 nvidia-cudnn-cu11==8.5.0.96
+nvidia-cudnn-cu12==8.9.2.26
 nvidia-cufft-cu11==10.9.0.58
+nvidia-cufft-cu12==11.0.2.54
 nvidia-curand-cu11==10.2.10.91
+nvidia-curand-cu12==10.3.2.106
 nvidia-cusolver-cu11==11.4.0.1
+nvidia-cusolver-cu12==11.4.5.107
 nvidia-cusparse-cu11==11.7.4.91
+nvidia-cusparse-cu12==12.1.0.106
 nvidia-nccl-cu11==2.14.3
+nvidia-nccl-cu12==2.18.1
+nvidia-nvjitlink-cu12==12.3.52
 nvidia-nvtx-cu11==11.7.91
+nvidia-nvtx-cu12==12.1.105
+oauthlib==3.2.2
 openai==0.27.2
 openfile==0.0.7
 opt-einsum==3.3.0
@@ -126,21 +158,27 @@ packaging==23.0
 pandas==2.0.3
 pandocfilters==1.5.0
 parso==0.8.3
+pathtools==0.1.2
 pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==10.1.0
+Pillow @ file:///croot/pillow_1696580024257/work
 pkgutil_resolve_name==1.3.10
 platformdirs==3.2.0
 portalocker==2.7.0
 prometheus-client==0.16.0
 promise==2.3
 prompt-toolkit==3.0.38
+protobuf==4.24.4
 psutil==5.9.6
 ptyprocess==0.7.0
 pure-eval==0.2.2
+pyarrow==13.0.0
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
 pycparser==2.21
 pydub==0.25.1
 Pygments==2.15.1
+pyOpenSSL @ file:///croot/pyopenssl_1690223430423/work
 pyparsing==3.1.1
 pyrsistent==0.19.3
 PySocks==1.7.1
@@ -155,17 +193,24 @@ QtPy==2.3.0
 regex==2023.6.3
 requests==2.31.0
 requests-oauthlib==1.3.1
+responses==0.18.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rich==13.6.0
+rouge-score==0.1.2
+rsa==4.9
 sacrebleu==2.3.1
 sacremoses==0.0.53
+safetensors==0.4.0
 scikit-learn==1.3.0
 scipy==1.10.1
 semantic-version==2.10.0
 Send2Trash==1.8.0
 sentencepiece==0.1.99
+sentry-sdk==1.34.0
+setproctitle==1.3.3
 six==1.16.0
+smmap==5.0.1
 sniffio==1.3.0
 snowballstemmer==2.2.0
 soupsieve==2.4
@@ -185,6 +230,7 @@ tabpfn==0.1.9
 tabulate==0.9.0
 tensorboard==2.12.3
 tensorboard-data-server==0.7.1
+tensorboardX==2.6.2.2
 tensorflow==2.12.0
 tensorflow-addons==0.20.0
 tensorflow-datasets==3.2.1
@@ -196,11 +242,17 @@ terminado==0.17.1
 tf2crf==0.1.33
 threadpoolctl==3.1.0
 tinycss2==1.2.1
+tokenizers==0.14.1
 toolwrapper==2.1.0
 toolz==0.12.0
+torch==2.0.1
+torchaudio==2.0.2
+torchvision==0.15.2
 tornado==6.2
 tqdm==4.66.1
 traitlets==5.9.0
+transformers==4.34.1
+triton==2.0.0
 typeguard==2.13.3
 types-python-dateutil==2.8.19.14
 typing_extensions==4.7.1
@@ -209,7 +261,9 @@ uc-micro-py==1.0.2
 uctools==1.3.0
 urduhack==1.1.1
 uri-template==1.3.0
+urllib3 @ file:///croot/urllib3_1698257533958/work
 uvicorn==0.22.0
+wandb==0.15.12
 wcwidth==0.2.6
 webcolors==1.13
 webencodings==0.5.1
@@ -218,5 +272,6 @@ websockets==11.0.3
 Werkzeug==2.3.6
 widgetsnbextension==4.0.6
 wrapt==1.14.1
+xxhash==3.4.1
 yarl==1.8.2
 zipp==3.15.0
